--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,15 +20,15 @@ services:
     ports:
       - "3000:3000"
     depends_on: 
-      - brian-yolo-backend
+      - yolo-backend
     networks:
       - app-net
 
   #Builds the backend Docker image and creates the backend microservice
-  brian-yolo-backend:
-    image: brianbwire/brian-yolo-backend:v1.0.0
+  yolo-backend:
+    image: perischepkemoi/yolo-backend:v1.0.1
     build: ./backend
-    container_name: brian-yolo-backend
+    container_name: yolo-backend
     stdin_open: true
     tty: true
     restart: always
