update frontend dockerfile and yaml file to match generated image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,4 +25,4 @@ COPY --from=build /usr/src/app /app
 EXPOSE 5000
 
 # Define the command to run your app
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
