--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Node runtime as a parent image
-FROM node:14-slim AS build
+# Step 1: Build stage (using Node 16)
+FROM node:16-alpine AS build
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
@@ -7,18 +7,18 @@ WORKDIR /usr/src/app
 # Copy the package.json and package-lock.json files to the container
 COPY package*.json ./
 
-# Install application dependencies
-RUN npm install
+# Install production dependencies only
+RUN npm install --only=production
 
 # Copy the rest of the application code to the container
 COPY . .
 
-FROM alpine:3.16.7
+# Step 2: Final stage for production (using Alpine for a lightweight runtime)
+FROM alpine:3.16
 
 WORKDIR /app
 
-RUN apk update && apk add npm
-
+# Copy built files and node_modules from the build stage
 COPY --from=build /usr/src/app /app
 
 # Expose the port the app runs on
