--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,11 @@ services:
 
   #Builds the frontend Docker image and creates the frontend microservice
   yolo-frontend:
-    image: perischepkemoi/yolo-frontend:v1.0.2
+    image: perischepkemoi/yolo-frontend:v1.0.4
     build: ./client
     container_name: yolo-frontend 
     ports:
-      - "3000:3000"
+      - "80:80"
     depends_on: 
       - yolo-backend
     networks:
@@ -21,12 +21,12 @@ services:
     ports:
       - "5000:5000"
     depends_on: 
-      - app-ip-mongo
+      - mongo
     networks:
       - app-net
 
   #Creates the database microservice
-  app-ip-mongo:
+  mongo:
     image: mongo
     container_name: app-mongo
     ports:
