--- a/roles/setup-mongodb/tasks/main.yml
+++ b/roles/setup-mongodb/tasks/main.yml
@@ -1,14 +1,25 @@
+# ansible/roles/mongodb/tasks/main.yml
 ---
+- name: Pull MongoDB Docker image
+  docker_image:
+    name: mongo
+    tag: latest
+    source: pull
+  tags:
+    - database
+    - backend
+
 - name: Run MongoDB Container
   docker_container:
-    name: app-mongo
-    image: mongo
+    name: "{{ mongo_container_name }}"
+    image: mongo:latest
     ports:
       - '27017:27017'
     volumes:
-      - ./app-mongo-data:/data/db
+      - "{{ mongo_volume }}:/data/db"
     networks:
-      - name: app-net
+      - name: "{{ mongo_network }}"
+    restart_policy: always
   tags:
     - database
     - backend
