--- a/roles/setup-mongodb/vars/main.yml
+++ b/roles/setup-mongodb/vars/main.yml
@@ -1,4 +1,4 @@
 ---
-mongo_container_name: app_mongo
-mongo_network: app-network
+mongo_container_name: app-mongo
+mongo_network: app-net
 mongo_volume: app-mongo-data
