--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Ansible playbook to dockerize and run yolo e-commerce app using ansible
+- name: Ansible playbook to run yolo e-commerce docker containers using ansible
   hosts: all
   become: true
   roles: 
