update playbook.yaml and setup-docker role to create network and volume

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,7 +2,8 @@
 - name: Ansible playbook to run yolo e-commerce docker containers using ansible
   hosts: all
   become: true
-  roles: 
+  roles:
+    - setup-docker 
     - frontend-deployment
     - setup-mongodb   
     - backend-deployment
