--- a/k8s/backend-configmap.yaml
+++ b/k8s/backend-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mongo-config
+  name: backend-config
 data:
   MONGO_URL: "mongodb://mongo-service:27017/yolomy"
