--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -31,8 +31,9 @@ metadata:
 spec:
   selector:
     app: backend
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 5000
-  type: ClusterIP
+
